--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,10 +1,3 @@
 Rest Password
-login system 
-data base with users and saldo 
-gui
-Loan service??
-
-
-1.Login System
-2.Insert system
-3.Extract System 
+Kredyt 
+Przelew
